{
    "name": "Input",
    "maps": [
        {
            "name": "GameStart",
            "id": "c090e6e7-0ef5-4446-acaf-12750a00f654",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "76f151bc-9dc6-4b6b-b413-12b994a40d3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "774f723d-e6f5-4319-8a3e-62e6ab0e6345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveShip",
                    "type": "Button",
                    "id": "f5a7a2f6-f83f-4827-9720-a6b8a455c71f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "f805d78a-9da1-4a55-ae61-5b60cc63ee79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "4c825c38-2ddb-43e8-8bf9-1fd3cb35d83e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43ffadc1-2eeb-483f-9d8d-cc33a88b6b20",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "388cf640-ff21-48ed-bdc9-0d23dee6859c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe5abfd6-8a52-4ce6-ae04-a3bd9e973544",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d634c2d-4e64-43a3-8eb3-d6c248383a89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe2b1ff8-d5db-4e14-8589-886104c527e8",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "964d7577-f862-4426-86f6-4365a6c45a29",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "4a55198c-bbed-4ac1-85de-12aff0b234cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "8b69f10b-ad79-4619-94fa-8d44e6cbf095",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DimensionUp",
                    "type": "Button",
                    "id": "0496ea3d-c236-4b05-b591-38ffc1b0b748",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DimensionDown",
                    "type": "Button",
                    "id": "1cee07b4-dcdd-4ca3-9273-729512e83448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveSelection",
                    "type": "Value",
                    "id": "8c48b6e5-82ae-44a4-a8f3-85ce098e87bb",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "455dc3fa-a8b6-4632-990f-e8341f785b1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9054f9ee-57d3-48fd-b4cd-999f7b3087f8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12551dc4-4d98-404b-9de7-4507fbaa444b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b072a45-2f21-459b-8477-4147b51d6919",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DimensionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3c6c89e-c2f5-4602-8ea3-13cbc84952f3",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DimensionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a10708c-1e90-4919-9895-1e5c46a138fb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8eb1469-cb6f-4e92-9240-b17487161c44",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hud",
            "id": "65f0ed59-a870-42d5-aa4f-6278af418c22",
            "actions": [
                {
                    "name": "FleetMenu",
                    "type": "Button",
                    "id": "0821d7f6-012c-46c3-b623-3eb13a2fb03a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipLeft",
                    "type": "Button",
                    "id": "ac3acc3f-778c-43b6-a770-dc953404163c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipRight",
                    "type": "Button",
                    "id": "55d330d2-c4df-4a71-af3a-973363e52746",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ddc32190-f40e-4bae-b81c-bfc0a56a6a5b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FleetMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa016fd0-9db0-49fa-9243-abd095aa8499",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0540032-dbfa-4d2b-9f5f-94064b54f84f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}